--- a/vignettes/using_virustotal.Rmd
+++ b/vignettes/using_virustotal.Rmd
@@ -14,15 +14,14 @@ vignette: >
 
 To get the current development version from GitHub:
 
-
-```{r, eval=F}
-#library("devtools")
+```{r, eval=F, install}
+#library(devtools)
 install_github("soodoku/virustotal")
 ```
 
 #### Load up the lib:
 
-```{r load}
+```{r, eval=F, load}
 library(virustotal)
 ```
 
